2001-03-07  Larry Jones  <larry.jones@sdrc.com>

	* sanity.sh (basica, binfiles2, head, admin): Update to match
	change to admin.c.

2001-03-06  Larry Jones  <larry.jones@sdrc.com>

	* client.c (recv_bytes): Handle EOF as in recv_line().
	(Reported by Pavel Roskin <proski@gnu.org>.)

	* admin.c (admin_fileproc): Change final error message to clarify
	that CVS refused to modify the RCS file rather than being unable to.

2001-02-28  Jim Meyering  <meyering@lucent.com>

	* commit.c (commit_usage): Use `-F logfile' (rather than -F file') in
	the description of that option, to be consistent with the `-F logfile'
	in the Usage: line.  Use spaces instead of TAB characters, and realign.

2001-03-02  Derek Price  <derek.price@openavenue.com>

	* sanity.sh (crerepos): Make failed ${CVS_RSH-rsh} attempt print the
	name of the command it actually used rather than 'rsh'.

2001-02-27  Derek Price  <derek.price@openavenue.com>

	* sanity.sh (modules2-ampermod-*): Added these tests to make sure the
	top level directory is created in an ampermodule when '-n' is passed to
	checkout.

	original bug report from
	    Wolfgang Haefelinger <Wolfgang.Haefelinger@Dresdner-Bank.com>

2001-02-27  Derek Price  <derek.price@openavenue.com>

	* sanity.sh (version-[12]): replace ' (client/server)' with .* in these
	two tests so that 'make check' works with whatever client/server
	options the executable was compiled with.

2001-02-23  Derek Price  <derek.price@openavenue.com>

	* main.c (main): Only check a cvsroot_t's isremote member when client
	support is enabled.
	* server.c: Include GSSAPI headers with client support as well as
	server support.

2001-02-21  Larry Jones  <larry.jones@sdrc.com>

	* modules.c, cvs.h (do_module): Add build_dirs argument and use it
	instead of run_module_prog.  Change all callers.
	* tag.c (cvstag): For rtag, don't build directories.
	* sanity.sh (modules3): Update to match.

2001-02-20  Derek Price  <derek.price@openavenue.com>

	* client.c: Use xgssapi.h.